--- a/tests/AssemblyTest/CountryRes.de.resx
+++ b/tests/AssemblyTest/CountryRes.de.resx
@@ -126,6 +126,7 @@
   <data name="CountryKey" xml:space="preserve">
     <value>CountryDE</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="TestFormat" xml:space="preserve">
     <value>{0} km²</value>
   </data>
